# syml-rs

./: Cargo.toml  README.md
editor_plug/syml.vim/ftdetect/: syml.vim
editor_plug/syml.vim/indent/: syml.vim
editor_plug/syml.vim/syntax/: syml.vim
src/: cli_utils.rs  lib.rs  parser.rs  serialize.rs
tests/: parse_test.rs
tests/parse_datas/: array_rec.json  array_rec.syml  empty_line.json  empty_line.syml  inline.json  inline.syml  mult_level_table_in_line.json  mult_level_table_in_line.syml  simple_literal.json  simple_literal.syml  str_control.json  str_control.syml  str_escape_comment.json  str_escape_comment.syml  string.json  string.syml  table.json  table.syml  tail_comma.json  tail_comma.syml  unicode.json  unicode.syml
