[package]
name = "syml"
version = "0.3.5"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "SYML is a configuration language similar to YAML, but may be more user-friendly"
keywords = ["serde", "serialization", "yaml"]
license = "MIT"
repository = "https://github.com/A4-Tacks/syml-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde_impl = ["serde", "serde/derive", "linked-hash-map/serde_impl"]
cli-utils = ["json"]

[dependencies]
linked-hash-map = "0.5.6"
peg = "0.8.2"
serde = { version = "1.0.197", optional = true }
json = { version = "0.12.4", optional = true }
unicode-ident = "1.0.12"

[dev-dependencies]
json = "0.12.4"

[[test]]
name = "parse_test"
path = "tests/parse_test.rs"
harness = false

[[bin]]
name = "syml2json"
required-features = ["cli-utils"]
path = "./src/bin/syml2json.rs"

[[bin]]
name = "json2syml"
required-features = ["cli-utils"]
path = "./src/bin/json2syml.rs"
